--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             </nav>
 
         </header>
-
         <main>
             <div class="about">
                 <h2>MEIST</h2>
                 <section class="about-content">
-                    <p>sisusisu/p>
+                    <p>sisusisu</p>
                     <img src="img/tiim.jpg" alt="kokad"/>
                     <!-- https://www.pexels.com/photo/two-men-preparing-food-3217156/ -->
                 </section>
@@ -70,12 +69,10 @@
                   <li><p>Tel: 12345678</p></li>
                   <li><p>@: info@cookbook.ee</p></li>
             </ul>
-
             <div class="footer-sm">
-                <a href="#"><img src="img/fb.png" alt="facebook" /></a>
-                <a href="#"><img src="img/ig.png" alt="instagram" /></a>
-            </div>
-            
+                <a href="#"><img src="img/fb.png" alt="facebook"/></a>
+                <a href="#"><img src="img/ig.png" alt="instagram"/></a>
+            </div> 
         </footer>
     </body>
 </html>
