more html improvements

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <body>
         <header>
 
-            <section class="header-banner">
-                <h1>COOKBOOK</h1>
-                <h2>EESTI MAITSVAIM RETSEPTIVEEB</h2>
-            </section>
+            <h1>COOKBOOK</h1>
+            <h2>EESTI MAITSVAIM RETSEPTIVEEB</h2>
+            
+            <hr/>
 
             <nav>
                 <ul>
@@ -24,6 +24,8 @@
                     <li><a href="#">Võta ühendust</a></li>
                 </ul>          
             </nav>
+
+            <section class="header-banner"></section>
 
         </header>
         <main>
