--- a/index.html
+++ b/index.html
@@ -12,21 +12,16 @@
     </head>
     <body>
         <header>
-
             <h1>COOKBOOK</h1>
             <h2>EESTI MAITSVAIM RETSEPTIVEEB</h2>
-            
             <hr/>
-
             <nav>
                 <ul>
                     <li><a href="#">Retseptid</a></li>
                     <li><a href="#">Võta ühendust</a></li>
                 </ul>          
             </nav>
-
-            <section class="header-banner"></section>
-
+            <section class="header-banner"></section> 
         </header>
         <main>
             <div class="content">
@@ -36,10 +31,9 @@
                     <br><br>
                     Aenean gravida lorem ut magna congue iaculis. Vivamus molestie semper elementum. Donec volutpat diam vel metus consectetur accumsan. Nunc pulvinar vitae diam at venenatis. Ut sit amet posuere lacus, ac eleifend odio. Nam ultrices at mi nec suscipit. Duis dapibus leo quis ligula scelerisque interdum. Fusce tempor, urna sit amet accumsan placerat, lacus ligula malesuada lectus, ut imperdiet dui sem quis leo. Proin aliquam euismod nulla sit amet placerat.</p>
                 </section>
-                <img src="img/tiim.jpg" alt="kokad"/>
+                <img src="img/tiim.jpg" alt="tiim"/>
                 <!-- https://www.pexels.com/photo/two-men-preparing-food-3217156/ -->
             </div>
-            
             <div class="recipes">
                 <h2>Retseptid</h2>
                 <section class="gallery-links">
@@ -63,9 +57,7 @@
 
                 </section>
             </div>
-
         </main>
-
         <footer>
             <ul class="footer-links">
                   <li><p>© 10.02.2021</p></li>
